src/objects/Can_We_Connect__c.object
<CustomObject>
    <description>Relationship Intelligence Rating using 1 to 5 values.  1 Never 5 Always.</description>
    <fields>
        <fullName>Articulates_long_term_Bus_Relat__c</fullName>
        <description>&quot;This contact can articulate my personal or company&apos;s long-term strategy for building a relationship with their company
1 Never 5 Always&quot;</description>
        <inlineHelpText>&quot;This contact can articulate my personal or company&apos;s long-term strategy for building a relationship with their company
1 Never 5 Always&quot;</inlineHelpText>
        <label>Articulates long-term Bus Relat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Can_we_Connect_Total__c</fullName>
        <formula>Articulates_long_term_Bus_Relat__c + Cost_Justification__c + Future_Opportunities__c + Introduces_Account_Influencers__c + Make_D_MQ_Preferred_Supplier__c + Non_traditional_Value_Resource__c + Openly_Shares_company_plans__c + Priveleged_Bus_Insights_Plans__c + Takes_Initiative_to_Help__c + Transcendal_Replationship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can we Connect Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Can We Connect?</relationshipLabel>
        <relationshipName>Can_We_Connect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Justification__c</fullName>
        <description>&quot;This contact makes an extra effort to assist me in cost-justifying the value that we can contribute.
1 Never 5 Always&quot;</description>
        <inlineHelpText>&quot;This contact makes an extra effort to assist me in cost-justifying the value that we can contribute.
1 Never 5 Always&quot;</inlineHelpText>
        <label>Cost Justification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Opportunities__c</fullName>
        <description>&quot;My discussions with this Contact touc upon potential opportunities beyond the current business opportunity.
1 Never 5 Always&quot;</description>
        <inlineHelpText>&quot;My discussions with this Contact touc upon potential opportunities beyond the current business opportunity.
1 Never 5 Always&quot;</inlineHelpText>
        <label>Future Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Introduces_Account_Influencers__c</fullName>
        <description>This contact introduces or references me to influential persons in the account.
1 Never 5 Always</description>
        <inlineHelpText>This contact introduces or references me to influential persons in the account.
1 Never 5 Always</inlineHelpText>
        <label>Introduces Account Influencers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Make_D_MQ_Preferred_Supplier__c</fullName>
        <description>&quot;This contact has a clear strategy for establishing us as the preferred supplier.
1 Never 5 Always&quot;</description>
        <inlineHelpText>&quot;This contact has a clear strategy for establishing us as the preferred supplier.
1 Never 5 Always&quot;</inlineHelpText>
        <label>Make D-MQ Preferred Supplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_traditional_Value_Resource__c</fullName>
        <description>&quot;This contact utilizes me or my company as a nontraditional resource through which value can be derived.
1 Never 5 Always&quot;</description>
        <inlineHelpText>&quot;This contact utilizes me or my company as a nontraditional resource through which value can be derived.
1 Never 5 Always&quot;</inlineHelpText>
        <label>Non-traditional Value Resource</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Openly_Shares_company_plans__c</fullName>
        <description>&quot;This contact openly shares their company plans, projects, and personnel with me.
1 Never 5 Always&quot;</description>
        <inlineHelpText>&quot;This contact openly shares their company plans, projects, and personnel with me.
1 Never 5 Always&quot;</inlineHelpText>
        <label>Openly Shares company plans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priveleged_Bus_Insights_Plans__c</fullName>
        <description>&quot;This contact utilizes internal contacts to provide me with business insights and information of a privileged nature. The contact openly disucsses their company&apos;s plans, projects, and personnel with me.
1 Never 10 Always&quot;</description>
        <inlineHelpText>&quot;This contact utilizes internal contacts to provide me with business insights and information of a privileged nature. The contact openly disucsses their company&apos;s plans, projects, and personnel with me.
1 Never 10 Always&quot;</inlineHelpText>
        <label>Priveleged Bus Insights &amp; Plans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Takes_Initiative_to_Help__c</fullName>
        <description>&quot;This contact takes the initiative in helping me in the current opportunity.
1 Never 5 Always&quot;</description>
        <inlineHelpText>&quot;This contact takes the initiative in helping me in the current opportunity.
1 Never 5 Always&quot;</inlineHelpText>
        <label>Takes Initiative to Help</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracker__c</fullName>
        <label>Tracker</label>
        <referenceTo>Tracker__c</referenceTo>
        <relationshipLabel>Can We Connect?</relationshipLabel>
        <relationshipName>Can_We_Connect</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transcendal_Replationship__c</fullName>
        <description>&quot;I feel my relationship with this contact transcends the business development opportunity at hand.
1 Never 5 Always&quot;</description>
        <inlineHelpText>&quot;I feel my relationship with this contact transcends the business development opportunity at hand.
1 Never 5 Always&quot;</inlineHelpText>
        <label>Transcendal Replationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Can We Connect</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Can We Connect Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Can We Connect?</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>